Tweaks to the bind/public address API.